apps/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: httproute
    namespace: podinfo
spec:
    parentRefs:
        - name: gateway
          namespace: istio-ingress
          sectionName: wildcard-https
    hostnames:
        - podinfo.ratsinthe.cloud
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: "/"
          backendRefs:
              - name: podinfo
                port: 9898
